--- a/demo.html
+++ b/demo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <script src="./shouldb.js"></script>
+    <script src="./src/shouldb.js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
